# Anti-Resume

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/api/routers/: __init__.py  auth.py  challenges.py  matches.py  submissions.py  uploads.py
app/db/: __init__.py  database.py
app/models/: models.py
app/schemas/: challenge.py  submission.py  user.py
app/utils/: auth.py
